--- a/invent_testcase.ipynb
+++ b/invent_testcase.ipynb
@@ -19,7 +19,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "home_path = \"/home/arasyildiz/Projects/invent_analytics/\"\n",
+    "home_path = \"/home/**************\"\n",
     "assignment1a_path = home_path + \"assignment4.1a.csv\"\n",
     "assignment1b_path = home_path + \"assignment4.1b.csv\"\n",
     "assignment1c_path = home_path + \"assignment4.1c.csv\"\n",
